kfreebsd-9 (9.0~svn20110328-1) UNRELEASED; urgency=low

  [ Guillem Jover ]
  * Now using Standards-Version 3.9.2 (no changes needed).

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 19 Feb 2011 23:01:52 +0100

kfreebsd-8 (8.2-1) unstable; urgency=low

  [ Robert Millan ]
  * New upstream release.
    - 000_adaptive_machine_arch.diff: Remove (merged).
    - 000_ata.diff: Remove (merged).
    - 000_ufs_lookup.diff: Remove (merged).
    - 004_xargs.diff: Resync.
    - 102_POLL_HUP.diff: Remove (merged).
    - 104_linprocfs.diff: Remove (merged).
    - 904_dev_full.diff: Resync.
    - 999_firmware.diff: Resync.
  * Make this package buildable on GNU/Linux. Closes: #602770.
  * MIPS port (with malta flavor).

  [ Petr Salinger ]
  * New upstream release, fixes local DoS. Closes: #611476, #613312.
    - 105_apm_amd64.diff: Resync.
    - 907_cpu_class.diff: Resync.
  * Extend 108_teken_utf8_table.diff for middle-dot l/L.
    Closes: #609681. Thanks to Robert Millan.
  * Add xen flavor on i386.
  * Enable quota.  Closes: #608995.

  [ Aurelien Jarno ]
  * Enable CARP, PF and PFSYNC.  Closes: #583848, #600061.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 19 Feb 2011 23:01:52 +0100

kfreebsd-8 (8.1+dfsg-7.1) unstable; urgency=high

  * Non-maintainer upload (requested by Petr Salinger).
  * Revert 918_delete_key.diff
    The proper solution needs more changes, unsuitable during deep freeze.
    See #605065, #605777, #607662.

 -- Robert Millan <rmh@debian.org>  Tue, 04 Jan 2011 13:49:34 +0100

kfreebsd-8 (8.1+dfsg-7) unstable; urgency=low

  [ Robert Millan ] 
  * Add 917_track_alignment.diff to remove obsolete warning about track
    alignment in MSDOS partitions. Closes: #603380.
  
  [ Petr Salinger ]
  * Add 918_delete_key.diff to conform to Debian Policy,
    9.8 Keyboard configuration. Closes: #605065.
  * Extend 108_teken_utf8_table.diff for U+25AE. Closes: #605724.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 03 Dec 2010 17:12:11 +0100
