@@ -2,6 +2,10 @@ kfreebsd-9 (9.0~svn20110328-1) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Now using Standards-Version 3.9.2 (no changes needed).
+  * Switch to source format “3.0 (quilt)”.
+    - Remove quilt from Build-Depends.
+    - Remove patch target in debian/rules.
+    - Remove now unneeded README.source.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sat, 19 Feb 2011 23:01:52 +0100
 
